--- a/templates/partials/taskbar.html
+++ b/templates/partials/taskbar.html
@@ -59,7 +59,7 @@
                 <span class="d-none d-lg-inline" style="font-size: var(--font-size-xs);">Detection</span>
             </div>
             {# Today's Count #}
-            <div class="badge bg-white text-primary" title="Today's Detections">
+            <div class="badge bg-white text-primary" title="Today's Observations">
                 <span id="taskbar-today-count">0</span> today
             </div>
         </div>
