--- a/templates/species_overview.html
+++ b/templates/species_overview.html
@@ -16,7 +16,7 @@
         {% include 'partials/filter_bar.html' %}
     </div>
     <div class="page-control-bar__meta">
-        Page {{ page }} of {{ total_pages }} ({{ total_items }} detections)
+        Page {{ page }} of {{ total_pages }} ({{ total_items }} observations)
     </div>
     <div class="page-control-bar__right">
         {% include 'partials/thumb_view_toggle.html' %}
@@ -53,7 +53,7 @@
 {% else %}
 <div class="empty-state">
     <div class="empty-state__icon">🐦</div>
-    <p>No detections found for this species with the current filter.</p>
+    <p>No observations found for this species with the current filter.</p>
 </div>
 {% endif %}
 
