--- a/templates/species.html
+++ b/templates/species.html
@@ -31,7 +31,7 @@
         <div class="wm-tile__media">
             <a class="wm-tile__button" style="height:100%; display:block;"
                 href="/species/overview?species_key={{ (det.species_key or 'Unclassified') | urlencode }}&min_score={{ current_threshold }}"
-                aria-label="Show all detections: {{ det.common_name }}">
+                aria-label="Show all observations: {{ det.common_name }}">
                 <img class="wm-tile__image" loading="lazy" src="{{ det.display_path }}" alt="{{ det.common_name }}"
                     data-thumb-src="{{ det.display_path }}" data-full-src="{{ det.full_path }}">
             </a>
